...
      {!isExecutive && (
        <Tab.Screen
          name="Sanadkom"
          component={TicketStackNavigator}
          options={{
            tabBarLabel: t('tabs.services'),
            tabBarButton: tabBarTestId('tab_bar_sanadkom'),
            tabBarIcon: ({ focused, color }) => <TabIcon name="services" focused={focused} color={color} />,
          }}
          listeners={({ navigation, route }) => ({
            tabPress: (e) =>
              popTabToRootOnReselect(navigation, route.name, e),
          })}
...
      )}
      <Tab.Screen
        name="More"
        component={MoreStackNavigator}
        options={{
          tabBarLabel: t('tabs.more'),
          tabBarButton: tabBarTestId('tab_bar_more'),
          tabBarIcon: ({ focused, color }) => <TabIcon name="tabMore" focused={focused} color={color} />,
        }}
        listeners={({ navigation, route }) => ({
          tabPress: (e) =>
            popTabToRootOnReselect(navigation, route.name, e),
        })}
...
